default/objects/pq_Opportunity_Manager_Setting__c/pq_Opportunity_Manager_Setting__c.object-meta.xml
<CustomObject>
    <label>Opportunity Manager Setting</label>
    <nameField>
        <displayFormat>OMS-{0000}</displayFormat>
        <label>Opportunity Manager Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Manager Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>