default/objects/pq_Opportunity_Manager_Setting__c/fields/Create_Opportunity_Plan__c.field-meta.xml
<CustomField>
    <fullName>Create_Opportunity_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Opportunity Plan</label>
    <type>Checkbox</type>
</CustomField>