default/objects/pq_Opportunity_Manager_Setting__c/fields/Days_of_Data_Used_In_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Days_of_Data_Used_In_Analysis__c</fullName>
    <label>Days of Data Used In Analysis</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>