default/objects/pq_Opportunity_Manager_Setting__c/fields/Opportunity_Setting_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Setting_Name__c</fullName>
    <label>Opportunity Setting Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>